# CoreLink-AI

./: .env.example  .gitignore  .tmp_memory_store_013e50fbc22e4212a35f1d8261f04269.db  .tmp_memory_store_6782efc3f62a4c5b9c05f498befad42b.db  .tmp_memory_store_9929913fb90a48bb8b9fff4de39ffd20.db  .tmp_memory_store_cf018adb5d9d4ed6a9631b40dcf48916.db  .tmp_memory_store_f22cad4181d14c29a76e6631d636ba07.db  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  amber-manifest.json5  pyproject.toml
docs/: A2A_INTERFACE_SPEC.md  DESIGN.md  MILESTONES.md  architecture_v2_plan.md  architecture_v3_implementation_plan.md  core_foundations.md  finance_hands.md  officeqa_execution_plan.md  officeqa_integration_plan.md  progress.md  project_plan_details.md  semantic_memory_future_plan.md  v3_checkpoint.md
eval/: officeqa_original_benchmark_slice.json  officeqa_regression_slice.json  officeqa_tsr_fixture_set.json
graphify-out/: .graphify_python
langmsith_runs/: run-019d17aa-2c6a-7792-8e22-72849dcb7d7b.json  run-019d17aa-2de8-7890-8b4e-14c5a0a8502b.json  run-019d17aa-2deb-7770-88c0-819c29f09234.json  run-019d17aa-2def-7170-87c7-c026b96fe3f0.json  run-019d17aa-58b1-72e3-87ef-d00dc01450c7.json  run-019d1830-6601-7da0-9727-85dd6c1d988b.json
langsmith_runs/: socre_results.json
scripts/: build_officeqa_index.py  evaluate_officeqa_tsr_fallback.py  run_benchmark_stateless_smoke.py  run_context_pack_curation.py  run_live_engine_smoke.py  run_live_legal_smoke.py  run_live_node_smoke.py  run_live_staged_smoke.py  run_officeqa_regression.py  run_staged_runtime_smoke.py  run_staged_slice.py  verify_officeqa_corpus.py
src/: agent.py  context_manager.py  executor.py  finance_tools.py  judge_mcp_bridge.py  mcp_client.py  mock_mcp_server.py  server.py  tools.py
tests/: conftest.py  staged_test_utils.py  test_budget_cost.py  test_compute_capability.py  test_coordinator.py  test_end_to_end_verifier.py  test_engine_runtime.py  test_features.py  test_file_handler.py  test_finance_analytics_tools.py  test_finance_tools.py  test_judge_mcp_bridge.py  test_llm_control.py  test_llm_repair.py  test_market_data_tools.py  test_mcp_client.py  test_mcp_integration.py  test_memory.py  test_memory_store.py  (+36 more)
(+192 files in other folders)
