[project]
name = "agent-template"
version = "0.1.0"
description = "A template for A2A agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=0.3.20",
    "uvicorn>=0.38.0",
    "langgraph>=0.5.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "tiktoken>=0.7.0",
    "python-dotenv>=1.0.0",
    "tavily-python>=0.5.0",
    "mcp>=1.26.0",
    "openpyxl>=3.1.5",
    "pypdf>=6.7.5",
    "python-docx>=1.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

